Fixed homepage title alignment

--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -5,11 +5,11 @@ h1 {
   font-family: 'Bitcount Prop Single Ink', sans-serif;
   font-size: xxx-large;
 }
-p1 {
+h2 {
   font-family: 'VT323', monospace;
   font-size: x-large;
   border-width: 10px;
-  border: 1px;
+  border: 0px;
   border-style: solid;
   font-size:12px;
 }
@@ -22,15 +22,7 @@ img {
 
 }
 P1 {
-  background-color: #b2b2b2; 
-  padding: 2.5px;            
-  border-radius: 0px;    
-  text-align: right;  
-  margin: 0 auto;
-  width: 1000px;
-}
-P1 {
-  background-color: #b2b2b2; 
+  background-color: #ffffff; 
   padding: 2.5px;            
   border-radius: 0px;    
   text-align: right;  
@@ -39,9 +31,9 @@ P1 {
 }
 
 div-1{
-  width: 1000px;
+  width: 1500px;
   border: 2px solid black;
-  text-align: right;
+  text-align: Left;
   margin: 0 auto
 }
 section {
@@ -58,10 +50,10 @@ div {
   aspect-ratio: 1 / 1;
 }
 article {
-  width: 100%;
-  height: 100%;
-  border: 2px, transparent;
-  align-self: center;
+  width: 64px;
+  height: 64px;
+  border: 0px, transparent;
+  align-self: left;
   margin: 0 auto
 }              
 a {
@@ -70,4 +62,53 @@ a {
   color: black;
   padding: 250px;
   text-align: left;
+}
+div1{
+  width: 250px;
+  border: 0px solid black;
+  text-align: Left;
+  margin: 0 auto
+}
+nav-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0px auto;
+  padding: 0 0px;
+}
+.nav-links a {
+  font-family: 'VT323', monospace;
+  font-size: xx-large;
+  color: black;
+  text-decoration: none;
+  padding: 0; 
+}
+.nav-links a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 15px;
+}
+header {
+  position: fixed;         
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: right;
+  justify-content: right;   
+  background-color: white;   
+  padding: 10px 0;
+  z-index: 1000;            
+  border-bottom: 1px solid #ddd;
+}
+header .favicon {
+  position: absolute;        /* locks it in the corner */
+  top: 10px;
+  left: 20px;
+  width: 48px;
+  height: 48px;
+}
+body {
+  padding-top: 80px; /* adjust based on header height */
 }
