--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -99,11 +99,10 @@ img {
 }
 
 div1{
-  width: 50%
+  width: 50%;
   align-self: center;
   border: 10px transparent;
 
-}
 }
 P1 {
   background-color: #ffffff; 
@@ -123,7 +122,7 @@ P1 {
 }
 body {
   background-color: rgb(255, 255, 255);
-  typesize: 18px;
+  font-size: 18px;
     font-family: 'VT323', monospace;
 }
 div-1{
@@ -170,8 +169,7 @@ h2 {
   font-family: 'VT323', monospace;
   font-size: large;
   color: black;
-  padding: 250px;
-  text-align: right;
+  text-align: left;
   margin: 0 auto;
   width: 1000px;
 
