--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ body {
 h1 {
   font-family: 'Bitcount Prop Single Ink', sans-serif;
   font-size: xxx-large;
+  text-indent: 775px;
+  z-index: 1;
 }
 h3{
   font-family: 'VT323', monospace;
-  font-size: xx-large;
+  font-size: x-large;
 }
 p1 {
   font-family: 'VT323', monospace;
@@ -57,14 +59,6 @@ section {
   flex-direction: row;
   justify-content: space-between;
 }
-div {
-  background-color: rgb(146, 146, 146);
-  width: 10px;
-  height: 10px;
-  border-radius: 0.5px;
-  margin: 0.5px;
-  aspect-ratio: 1 / 1;
-}
 article {
   width: 100%;
   height: 100%;
@@ -90,4 +84,41 @@ article img {
   top: 0px;
   z-index: -1;
 }
+h4{
+  font-family: 'VT323', monospace;
+  font-size: large;
+  text-align: left;
 
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.top-right {
+  position: absolute;
+  top: 30px;
+  right: 5px;
+}
+.hero-box {
+  position: relative;
+  width: 100%;
+}
+
+.hero-box img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.hero-box h1 {
+  position: absolute;
+  top: 80px;            /* distance from top of image */
+  right: 235px;          /* distance from right side */
+  background:transparent;  /* your grey rectangle */
+  padding: 15px 25px;   /* size of grey box */
+  font-family: 'Bitcount Prop Single Ink', sans-serif;
+  font-size: xxx-large;
+  margin: 0;
+  z-index: 10;
+}
